--- a/Inicio.html
+++ b/Inicio.html
@@ -36,9 +36,13 @@
                             <input class="form-control" name="correo" id="correo" placeholder="'ejemplo@gmail.com'">
                         </div>
                         <div>
+                            <label for="lastname">Contraseña</label>
+                            <input class="form-control" name="contrasena" id="Contrasena" placeholder="Ya tu sabe">
+                        </div>
+                        <div>
                             <label></label>
                         </div>
-                        <button class="btn btn-primary" onclick="guardarCarrera()">Guardar</button>
+                        <button class="btn btn-primary" onclick="guardarAdmin()">Guardar</button>
                     </div>
                 </div>
             </div>
