--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1 class="center" style="color:rgb(211, 24, 24);">Almacenes INT</h1>    
         </nav>
         <div class="form-group">
-            <h1>Ingresa los siguientes datos para ingresar</h1>
+            <h1>Ingresa los siguientes datos para acceder</h1>
             <br>
             <br>
             <input id="nombre" type="text" class="form-control" name="nombre" placeholder="Nombre">
