--- a/index2.html
+++ b/index2.html
@@ -8,22 +8,30 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    <div class="cuerpo">
-        <nav class="titulo">
-            <h1 class="titulo" style="color:rgb(211, 24, 24);">Almacenes INT</h1>    
-        </nav>
-    </div>
-    <br>
     <div>
-        <button id="boton" class="boton" > Agregar producto </button>
-    </div>
-    <br>
-    <div>
-        <button id="boton2" class="boton2">Eliminar producto</button>
-    </div>
-    <br>
-    <div>
-        <button id="boton3" class="boton3">Buscar producto</button>
+        <div>
+            <nav class="titulo">
+                <h1 class="titulo" style="color:rgb(211, 24, 24);">Almacenes INT</h1>    
+            </nav>
+        </div>
+        <br>
+        <div>
+            <a href="indexAP.html">
+                <button id="boton" class="boton"> Agregar producto </button>
+            </a>
+        </div>
+        <br>
+        <div>
+            <a href="indezEP.html">
+                <button id="boton2" class="boton2">Eliminar producto</button>
+            </a>
+        </div>
+        <br>
+        <div>
+            <a href="indexBP">
+                <button id="boton3" class="boton3">Buscar y ver productos</button>
+            </a>
+        </div>
     </div>
 </body>
 </html>
